--- a/manifest.json
+++ b/manifest.json
@@ -1,30 +1,30 @@
 {
-  "short_name": "Invitacion - Brian y Chelu",
-  "name": "Invitacion al casamiento de  Brian y Chelu",
+  "short_name": "Invitation - Harjonan",
+  "name": "Wedding Invitation - Harjonan",
   "theme_color": "#fff",
   "background_color": "#103AB9",
   "display": "standalone",
   "orientation": "portrait",
-  "scope": "/casamiento/",
-  "start_url": "/casamiento/",
+  "scope": "/",
+  "start_url": "/",
   "icons": [
     {
-      "src": "/casamiento/icons/android-chrome-192x192.png",
+      "src": "/icons/android-chrome-192x192.png",
       "sizes": "192x192",
       "type": "image/png"
     },
     {
-      "src": "/casamiento/icons/android-chrome-512x512.png",
+      "src": "/icons/android-chrome-512x512.png",
       "sizes": "512x512",
       "type": "image/png"
     },
     {
-      "src": "/casamiento/icons/favicon-16x16.png",
+      "src": "/icons/favicon-16x16.png",
       "sizes": "16x16",
       "type": "image/png"
     },
     {
-      "src": "/casamiento/icons/favicon-32x32.png",
+      "src": "/icons/favicon-32x32.png",
       "sizes": "32x32",
       "type": "image/png"
     }
